--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^2.8.1"
   },
   "dependencies": {
+    "google-map-react": "^0.24.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
